# erofs-container-toolkit

./: go.mod  go.sum
cmd/containerd-erofs-grpc/: main.go
cmd/ctr-erofs/commands/: convert.go
docs/: containerd-erofs-proxy-snapshotter-design.md  erofs-native-image-spec.md
lazyd/: Cargo.toml
lazyd/src/: control.rs  error.rs  fanotify.rs  instance.rs  main.rs
lazyd/src/remote/: mod.rs  oci.rs
pkg/containerd-erofs-grpc/: blob.go  blob_test.go  manifest.go  manifest_test.go  refs.go  refs_test.go  snapshotter.go  snapshotter_logic_test.go  snapshotter_test.go  types.go  unit_helpers_test.go
pkg/containerd-erofs-grpc/credentials/: dockerconfig.go  dockerconfig_test.go
pkg/containerd-erofs-grpc/daemon/: dummy.go  eager.go  eager_test.go  lazyd.go  lazyd_test.go  types.go
pkg/converter/: converter.go  dual_manifest.go  dual_manifest_test.go
