[package]
name = "lazyd"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
